--- a/src/css/Major-project.css
+++ b/src/css/Major-project.css
@@ -323,6 +323,7 @@ p {
 }
 
 .basic-1 {
+    min-width: 100vw;
     padding-top: 6rem;
     padding-bottom: 3rem;
 }
@@ -362,8 +363,11 @@ p {
 }
 
 .section-h2 {
-    margin-bottom: 1.375rem;
     color: #484a46;
+}
+
+.section-h2 {
+    margin-bottom: 1.375rem;
     font: 700 1.75rem/2.125rem "Montserrat", sans-serif;
 }
 
@@ -389,6 +393,79 @@ p {
     -o-transition: transform 0.3s ease-in-out;
     transition: transform 0.3s ease-in-out;
     transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+}
+
+
+.services-section {
+    background-color: #FBFBFB;
+}
+
+.services-section .price-cards {
+    display: flex;
+    /* grid-template-columns: repeat(3, 1fr); */
+    justify-content: space-between !important;
+}
+
+.services-section .single-template {
+    max-width: 20.875rem;
+    margin-bottom: 2rem !important;
+    /* margin: 0 ; */
+}
+
+.services-section .single-template .card-img-fluid {
+    border-top-left-radius: 0.375rem;
+    border-top-right-radius: 0.375rem;
+}
+
+.services-section .single-template .price-button {
+    margin-top: -1.375rem !important;
+}
+
+.basic-2 {
+    text-align: center !important;
+}
+
+.services-section .basic-2 .section-h2 {
+    margin-bottom: 3.25rem;
+}
+
+.services-section .single-template .section-h2 {
+    font: 700 1.375rem/1.75rem "Montserrat", sans-serif;
+    margin-bottom: 0.75rem;
+    text-align: center;
+}
+
+.services-section .single-template .single-template-ul-li {
+    text-align: left;
+}
+
+.services-section .single-template-ul li i {
+    font-size: 0.5em;
+    color: #14bf98;
+}
+
+.services-section .single-template-ul {
+    margin-bottom: 1.5rem !important;
+}
+
+.services-section .price-cards-body .first-p {
+    text-align: left !important;
+    margin-bottom: 1rem;
+}
+
+.services-section .price-cards-body .second-p {
+    margin-bottom: 0.25rem;
+    color: #484a46;
+    font: 700 1rem/1.5rem "Montserrat", sans-serif;
+    text-align: center !important;
+}
+
+.services-section .price-cards .price-cards-body {
+    border: 1px solid #ebe8e8;
+    background-color: #fff;
+    padding: 2.25rem 2.5rem 2.125rem 2.5rem;
+    border-bottom-left-radius: 0.375rem;
+    border-bottom-right-radius: 0.375rem;
 }
 
 .basic-1 .image-container:hover img {
