--- a/src/css/Major-project.css
+++ b/src/css/Major-project.css
@@ -632,8 +632,9 @@ p {
 }
 
 @media screen and (max-width: 767px) {
+
     .header {
-        width: 100vw;
+        width: 100%;
         height: 90vh;
         background-repeat: no-repeat;
         background-position: center;
