--- a/src/css/Media_Queries.css
+++ b/src/css/Media_Queries.css
@@ -1,5 +1,15 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+.container {
+    padding: 2rem 3rem !important;
+    margin: auto auto !important;
+}
+
+.fluid-container {
+    display: flex;
+    flex-flow: row wrap;
 }
