--- a/src/css/Major-project.css
+++ b/src/css/Major-project.css
@@ -310,7 +310,7 @@ p {
     transition: all 0.2s;
 }
 
-.btn-solid-lg {
+.my-button {
     display: inline-block;
     padding: 1.375rem 2.125rem 1.375rem 2.125rem;
     border: 0.125rem solid #14bf98;
@@ -324,8 +324,9 @@ p {
     transition: all 0.2s;
 }
 
+
 .btn-solid-reg,
-.btn-solid-lg:hover {
+.my-button:hover {
     background-color: transparent;
     color: #14bf98;
     text-decoration: none;
@@ -893,7 +894,7 @@ h2 {
     }
 }
 
-@media screen and (min-width: 260px) and (max-width: 767px) {
+@media (min-width: 260px) and (max-width: 767px) {
     .accordian {
         display: grid;
         grid-template-rows: repeat(4, 1fr);
@@ -918,6 +919,11 @@ h2 {
         /* border: 1px solid red; */
     }
 
+    .accordian .area-2 {
+        padding-left: 1rem !important;
+        padding-right: 1rem !important;
+    }
+
     .accordian .area-2 .accordion-container {
         margin-left: auto !important;
         margin-right: auto !important;
@@ -925,7 +931,7 @@ h2 {
 
     .accordian .accordion-container {
         width: 100%;
-        margin-left: 0;
+        /* margin-left: 0; */
         padding-top: 3.375rem;
     }
 
